Added single page layout

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,16 @@
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
-  
+  <div id="header" class="panel">
+    Header
+  </div>
+
+  <div id="content" class="panel">
+    Content
+  </div>
+
+  <div id="footer" class="panel">
+    Footer
+  </div>
 </body>
 </html>
