Demonstrate navigating between pages

--- a/app/measurement.html
+++ b/app/measurement.html
@@ -14,9 +14,7 @@
   </div>
 
   <div id="content" class="panel">
-    Content
-
-    <button id="toMeasurementPageButton">Start measurement</button>
+    Measurement
   </div>
 
   <div id="footer" class="panel">
