--- a/app/measurement.html
+++ b/app/measurement.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="measurement.css">
   <script defer type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="fili.min.js"></script>
   <script defer type="text/javascript" src="measurement.js"></script>
 </head>
 <body>
   <div id="header" class="panel">
-    Measurement
+    Heart rate: <span id="heartRate"></span> BPM
   </div>
 
   <div id="content" class="panel">
