modified:   app/style.css 	app/arrowBlue.png 	app/basicUIPagesStyle.css 	app/homePage.html 	app/hrPage1.html 	app/hrPage1Phone.png 	app/hrPage2.html 	app/hrPage2Phone.png 	app/hrPage3.html 	app/hrPage3Phone.png 	app/rrPage1.html 	app/rrPage1Img.png 	app/rrPage2.html 	app/rrPage2Img.png 	app/rrPage3.html 	app/rrPage3Img.png

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="header" class="panel">
-    Header :) 
+    Header :) <a href="homePage.html">home_page</a>
   </div>
 
   <div id="content" class="panel">
