--- a/app/hrPage4.html
+++ b/app/hrPage4.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <header>
-        <title>hrPage3</title>
+        <title>hrPage4</title>
         <link rel="stylesheet" type="text/css" href="basicUIPagesStyle.css" media="screen"/>
+        <script defer type="text/javascript" src="app.js"></script>
         <style>
              @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;1,300&family=Patrick+Hand&display=swap');
         </style>
@@ -11,12 +12,13 @@
         </style>
     </header>
     <body>
-        <a href="hrPage2.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
-        <div id="boxPg2">
-            <div id="boxText2"> Hold your hand steady and <br> apply light pressure with <br> your finger.</div>
+        <a href="hrPage3.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
+        <div id="boxPgGif">
+            <div id="boxText2"> Move the fingerprint into the circle <br> as shown below by shifting your <br> finger.</div>
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
-            <input type="button" onclick="window.location.href = 'hrPage4.html';" id="buttonNext" value="Next">
+            <input type="button" onclick="window.location.href = 'measurement.html';" id="buttonMeasurements" value="Start Measurement">
         </div>
-        <div id="hrpg2Image"><img src="hrPage3Phone.png" width="1080px" height="1100px" ></div> 
+        <img src="fingerprintMovingGif.gif" id="gif" alt="fingerprint moving towards target gif" >
     </body>
+
 </html>
