--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mobile Health Usability</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="basicUIPagesStyle.css">
   <script defer type="text/javascript" src="app.js"></script>
 </head>
 <body>
