--- a/app/measurement.html
+++ b/app/measurement.html
@@ -12,6 +12,7 @@
   <script defer type="text/javascript" src="measurement.js"></script>
 </head>
 <body>
+  <H1> Go to results Page: <a href="hrResults.html"> hr Results Page</a></H1>
   <div id="header" class="panel">
     Heart rate: <span id="heartRate"></span> BPM
   </div>
@@ -26,3 +27,68 @@
   </div>
 </body>
 </html>
+
+
+
+<!-- edited, will go back and change to proper UI once Results page is pushed
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mobile Health Usability</title>
+  <link rel="stylesheet" type="text/css" href="basicUIPagesStyle.css">
+  <link rel="stylesheet" type="text/css" href="measurement.css">
+  <script defer type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="fili.min.js"></script>
+  <script defer type="text/javascript" src="measurement.js"></script>
+</head>
+<body>
+  <a href="hrPage3.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
+  <div id="header" class="panel">
+    Heart rate: <span id="heartRate"></span> BPM
+  </div>
+
+  
+    <video autoplay id="measurementVideo" hidden></video>
+    <canvas id="measurementCanvas"></canvas>
+ 
+
+  <div id="footer" class="panel">
+    Footer
+  </div>
+</body>
+</html> -->
+
+<!-- previous code in case I make a boo boo: 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mobile Health Usability</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="measurement.css">
+  <script defer type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="fili.min.js"></script>
+  <script defer type="text/javascript" src="measurement.js"></script>
+</head>
+<body>
+  <div id="header" class="panel">
+    Heart rate: <span id="heartRate"></span> BPM
+  </div>
+
+  <div id="content" class="panel">
+    <video autoplay id="measurementVideo" hidden></video>
+    <canvas id="measurementCanvas"></canvas>
+  </div>
+
+  <div id="footer" class="panel">
+    Footer
+  </div>
+</body>
+</html>
+--> 
