help menu created

--- a/app/hrPage1.html
+++ b/app/hrPage1.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        <a href="homePage.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
+        <a href="homePage.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
         <div id="boxPg1">
             <div id="boxText1"> Measure your heart rate with the <br><b>rear-facing camera</b> on the back of<br> your phone.</div>
             <div id="hrpg1Image"><img src="hrPage1Phone.png" width="850px" height="1100px" ></div>  
