--- a/app/hrPage2.html
+++ b/app/hrPage2.html
@@ -11,7 +11,8 @@
         </style>
     </header>
     <body>
-        <a href="hrPage1.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
+       
+        <a href="hrPage1.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
         <div id="boxPg2">
             <div id="boxText2">Place your finger <br> over the rear-facing camera lens.<br> Use the lens on the left.</div>
              
