--- a/app/hrPage3.html
+++ b/app/hrPage3.html
@@ -11,7 +11,7 @@
         </style>
     </header>
     <body>
-        <a href="hrPage2.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
+        <a href="hrPage2.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
         <div id="boxPg2">
             <div id="boxText2"> Hold your hand steady and <br> apply light pressure with <br> your finger.</div>
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
