--- a/app/hrPage4.html
+++ b/app/hrPage4.html
@@ -12,7 +12,8 @@
         </style>
     </header>
     <body>
-        <a href="hrPage3.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
+        
+        <a href="hrPage3.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
         <div id="boxPgGif">
             <div id="boxText2"> Move the fingerprint into the circle <br> as shown below by shifting your <br> finger.</div>
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
