--- a/app/rrPage1.html
+++ b/app/rrPage1.html
@@ -11,7 +11,7 @@
         </style>
     </header>
     <body>
-        <a href="homePage.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
+        <a href="homePage.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
         <div id="boxPg2">
             <div id="boxText2"> Measure your respiratory rate <br> with your front-facing phone <br> camera.</div>
              
