--- a/app/rrPage2.html
+++ b/app/rrPage2.html
@@ -11,7 +11,7 @@
         </style>
     </header>
     <body>
-        <a href="rrPage1.html"><div id="arrow"><img src="arrowBlue.png" width="70px" height="70px" ></div></a>
+        <a href="rrPage1.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
         <div id="boxPg2">
             <div id="boxText3"> Lean your phone on a stable <br> surface.</div>
              
