Hana - progress bar & user messages work

--- a/app/measurement.html
+++ b/app/measurement.html
@@ -82,9 +82,19 @@
   <!--Video Feed Code  <span id="heartRate"></span> -->
 
  <!--Practice pop up change js DOM-->
- <div  class="firstMessage" id="changeText">
+ <div  id="firstMessage">
   Move the fingerprint into the circle by shifting your finger
 </div>  
+<div  id="secondMessage">
+  Measuring your heart rate. Hold still...
+</div>  
+<div id="thirdMessage">
+  Measurement complete! 
+</div>
+<div id="fourthMessage">
+  <b>We're having trouble detecting your finger.</b> Move the 
+  fingerprint to the circle. <br> Hold still once your finger is aligned.
+</div>
  
 
   <div id="hrBPMDisplay" class="panel">
