Hana - Progress Bar & Messages work! Flaslight = working progress

--- a/app/measurement.html
+++ b/app/measurement.html
@@ -77,6 +77,7 @@
     </div>
   </div>
   <button id="buttonHelp" onclick="toggleHelpPopup()"><b>Help</b></button>
+  
 
 
   <!--Video Feed Code  <span id="heartRate"></span> -->
@@ -101,6 +102,9 @@
     (Keeping Temporarily:) Heart rate:   BPM
   </div>
 
+  <button id="buttonFlashlight" onclick="toggleFlashlight()">flashlight<img id="circleFlash" src="flashlightOn.png" width="85px" height="85px"></button>
+  
+  
   <div>
     <video autoplay id="measurementVideo" hidden></video>
     <canvas id="measurementCanvas"></canvas>
