Hana - flashlight works

--- a/app/measurement.html
+++ b/app/measurement.html
@@ -99,10 +99,12 @@
  
 
   <div id="hrBPMDisplay" class="panel">
-    (Keeping Temporarily:) Heart rate:   BPM
+    (Keeping Temporarily:) Heart rate:  <span id="heartRate"></span> BPM
   </div>
 
-  <button id="buttonFlashlight" onclick="toggleFlashlight()">flashlight<img id="circleFlash" src="flashlightOn.png" width="85px" height="85px"></button>
+  <button id="buttonFlashlight" onclick="toggleFlashlight()">flash
+  <img id="circleFlash" src="flashOff.png" width="65px" height="65px">
+  </button>
   
   
   <div>
