Hana - H.R. portion done : )

--- a/app/homePage.html
+++ b/app/homePage.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        <div id="telehealth">Telehealth Scope</div>
+        <div id="telehealth"> <b>Telehealth Scope </b></div>
         <div id="summaryText">Take the following health <br>measurements before your<br>
         telehealth appointment begins.</div>
         <div class="flex-container"> 
