--- a/app/hrPage4.html
+++ b/app/hrPage4.html
@@ -15,7 +15,7 @@
         
         <a href="hrPage3.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
         <div id="boxPgGif">
-            <div id="boxText2"> Move the fingerprint into the circle <br> as shown below by shifting your <br> finger.</div>
+            <div id="boxTextGif"> Move the fingerprint into the circle as shown below by shifting your finger.</div>
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
             <input type="button" onclick="window.location.href = 'measurement.html';" id="buttonMeasurements" value="Start Measurement">
         </div>
