Hana - adding 'template' to R.R. Pages

--- a/app/hrPage1.html
+++ b/app/hrPage1.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <title>hrPage1</title>
-        <link rel="stylesheet" type="text/css" href="basicUIPagesStyle.css" media="screen"/>
+        <link rel="stylesheet" type="text/css" href="hrbasicUIPagesStyle.css" media="screen"/>
         <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;1,300&family=Patrick+Hand&display=swap');
         </style>
