--- a/app/hrResults.html
+++ b/app/hrResults.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <header>
         <title>hrPage4</title>
-        <link rel="stylesheet" type="text/css" href="basicUIPagesStyle.css" media="screen"/>
+        <link rel="stylesheet" type="text/css" href="hrbasicUIPagesStyle.css" media="screen"/>
         <script defer type="text/javascript" src="app.js"></script>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;1,300&display=swap');
