--- a/app/measurement.html
+++ b/app/measurement.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mobile Health Usability</title>
   <link rel="stylesheet" type="text/css" href="measurement.css"> 
-  <link rel="stylesheet" type="text/css" href="basicUIPagesStyle.css">
+  <link rel="stylesheet" type="text/css" href="hrbasicUIPagesStyle.css">
  <!--Re-import Google Font! -->
  
   
