--- a/app/rrPage3.html
+++ b/app/rrPage3.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <header>
         <title>rrPage3</title>
-        <link rel="stylesheet" type="text/css" href="basicUIPagesStyle.css" media="screen"/>
+        <link rel="stylesheet" type="text/css" href="rrbasicUIPagesStyle.css" media="screen"/>
         <style>
              @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;1,300&family=Patrick+Hand&display=swap');
         </style>
@@ -12,12 +12,12 @@
     </header>
     <body>
         <a href="rrPage2.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
-        <div id="boxPg2">
-            <div id="boxText2"> Measure your respiratory rate <br> with your front-facing phone <br> camera.</div>
+        <div id="boxPg1">
+            <div id="boxText1"> Measure your respiratory rate <br> with your front-facing phone <br> camera.</div>
              
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
-            <input type="button" onclick="window.location.href = 'rrPage3.html';" id="buttonNext" value="Next">
+            <input type="button" onclick="window.location.href = 'rrPage4.html';" id="buttonNext" value="Next">
         </div>
-        <div id="hrpg2Image"><img src="rrPage3Img.png" width="1080px" height="1000px" ></div> 
+        <div id="rrImg"><img src="rrPage3Img.png" width="1080px" height="1000px" ></div> 
     </body>
 </html>
