--- a/app/rrPage4.html
+++ b/app/rrPage4.html
@@ -20,7 +20,7 @@
             <div id="boxTextGif"> Position yourself within the frame. Make sure you're comfortable.</div>
 
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
-            <input type="button" onclick="window.location.href = 'measurement.html';" id="buttonMeasurements" value="Start Measurement">
+            <input type="button" onclick="window.location.href = 'rrMeasurement.html';" id="buttonMeasurements" value="Start Measurement">
         </div>
         <img src="rrPage4Img.png"  id="rrGifImg" width="900px" height="1020px" alt="respiratory image person example">
         
