the results page now shows the averaged bpm

--- a/app/measurement.html
+++ b/app/measurement.html
@@ -60,7 +60,7 @@
                 number.innerHTML = null;
               }
           } 
-      }, 300); //miliseconds 
+      }, 300); //miliseconds (proper is 300)
       
   </script>
 </div>
