most recent code

--- a/app/hrPage1.html
+++ b/app/hrPage1.html
@@ -14,7 +14,7 @@
         <a href="homePage.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
         <div id="boxPg1">
             <div id="boxText1"> Measure your heart rate with the <br><b>rear-facing camera</b> on the back of<br> your phone.</div>
-            <div id="hrpg1Image"><img src="hrPage1Phone.png" width="800px" height="1050px" ></div>  
+            <div id="hrpg1Image"><img src="Back_Pixel_4.gif" width="800px" height="1050px" ></div>  
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
             <input type="button" onclick="window.location.href = 'hrPage2.html';" id="buttonNext" value="Next">
         </div>
