--- a/app/rrMeasurement.html
+++ b/app/rrMeasurement.html
@@ -10,9 +10,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
   <script defer type="text/javascript" src="rrMeasurement.js"></script>
+  <link rel="stylesheet" type="text/css" href="rrbasicUIPagesStyle.css">
+  <link rel="stylesheet" type="text/css" href="rrMeasurement.css">
 </head>
 <body>
+  <a href="rrPage4.html"><img src="arrowBlue.png" width="35px" height="35px"></a>
+
+
   <video class="input_video" hidden></video>
-  <canvas class="output_canvas" width="360" height="640"></canvas>
+  <div id="videoFeed"><canvas class="output_canvas" width="400" height="480"></canvas></div>
 </body>
 </html>
