--- a/app/measurement.html
+++ b/app/measurement.html
@@ -101,7 +101,7 @@
   fingerprint to the circle. <br> Hold still once your finger is aligned.
 </div>
 
-
+<!--<div id="debugText">-1</div>-->
 
   <div id="hrBPMDisplay" class="panel">
    
