--- a/app/hrPage2.html
+++ b/app/hrPage2.html
@@ -12,12 +12,12 @@
     </header>
     <body>
        
-        <a href="hrPage1.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
+        <a href="hrPage1.html"><img src="arrowBlue.png" width="80px" height="80px"></a>
         <div id="boxPg2">
             <div id="boxText2">Place your finger <br> over the rear-facing camera lens.<br> Use the lens on the left.</div>
              
-            <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
-            <input type="button" onclick="window.location.href = 'hrPage3.html';" id="buttonNext" value="Next">
+            <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancelPg2" value="Cancel">
+            <input type="button" onclick="window.location.href = 'hrPage3.html';" id="buttonNextPg2" value="Next">
         </div>
         <div id="hrpg2Image"><img src="hrPage2Phone.png" width="1000px" height="1030px" ></div> 
     </body>
