--- a/app/measurement.html
+++ b/app/measurement.html
@@ -9,7 +9,12 @@
   <link rel="stylesheet" type="text/css" href="hrbasicUIPagesStyle.css">
  <!--Re-import Google Font! -->
  
-  
+ <style>
+  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;1,300&family=Patrick+Hand&display=swap');
+</style>
+<style>
+ @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;1,300&display=swap');
+</style>
   <script type="text/javascript" src="fili.min.js"></script>
   <script defer type="text/javascript" src="measurement.js"></script>
   </head>
@@ -105,7 +110,7 @@
 
   <div id="hrBPMDisplay" class="panel">
    
-    Heart rate:  <span id="heartRate"></span> BPM
+    <!--Heart rate:  <span id="heartRate"></span> BPM //displays HR BPM on the measurement page -->
     <img id="oval" src="dashed_oval.png" width="150px" height="170px">
 
   
