--- a/app/hrPage3.html
+++ b/app/hrPage3.html
@@ -11,11 +11,11 @@
         </style>
     </header>
     <body>
-        <a href="hrPage2.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
+        <a href="hrPage2.html"><img src="arrowBlue.png" width="80px" height="80px"></a>
         <div id="boxPg3">
             <div id="boxText2"> Hold your hand steady and <br> apply light pressure with <br> your finger.</div>
-            <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
-            <input type="button" onclick="window.location.href = 'hrPage4.html';" id="buttonNext" value="Next">
+            <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancelPg3" value="Cancel">
+            <input type="button" onclick="window.location.href = 'hrPage4.html';" id="buttonNextPg3" value="Next">
         </div>
         <div id="hrpg2Image"><img src="hrPage3Phone.png" width="1080px" height="1100px" ></div> 
     </body>
