--- a/app/hrPage4.html
+++ b/app/hrPage4.html
@@ -13,10 +13,10 @@
     </header>
     <body>
         
-        <a href="hrPage3.html"><img src="arrowBlue.png" width="70px" height="70px"></a>
+        <a href="hrPage3.html"><img src="arrowBlue.png" width="80px" height="80px"></a>
         <div id="boxPgGif">
             <div id="boxTextGif"> Move the fingerprint into the circle as shown below by shifting your finger.</div>
-            <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
+            <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancelPg4" value="Cancel">
             <input type="button" onclick="window.location.href = 'measurement.html';" id="buttonMeasurements" value="Start Measurement">
         </div>
         <img src="fingerprintMovingGif.gif" id="gif" alt="fingerprint moving towards target gif" >
