Updated instruction text.

--- a/app/rrPage3.html
+++ b/app/rrPage3.html
@@ -11,15 +11,15 @@
         </style>
     </header>
 
-    
+
     <body>
         <a href="rrPage2.html"><img src="arrowBlue.png" width="80px" height="80px"></a>
         <div id="boxPg1">
-            <div id="boxText1"> Measure your respiratory rate <br> with your front-facing phone <br> camera.</div>
-             
+            <div id="boxText1"> Find an area with even lighting<br>and remove your mask. </div>
+
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancel" value="Cancel">
             <input type="button" onclick="window.location.href = 'rrPage4.html';" id="buttonNext" value="Next">
         </div>
-        <div id="rrImg"><img src="rrPage3Img.png" width="1080px" height="1000px" ></div> 
+        <div id="rrImg"><img src="rrPage3Img.png" width="1080px" height="1000px" ></div>
     </body>
 </html>
