--- a/app/hrPage4.html
+++ b/app/hrPage4.html
@@ -12,10 +12,10 @@
         </style>
     </header>
     <body>
-        
+
         <a href="hrPage3.html"><img src="arrowBlue.png" width="80px" height="80px"></a>
         <div id="boxPgGif">
-            <div id="boxTextGif"> Move the fingerprint into the circle as shown below by shifting your finger.</div>
+            <div id="boxTextGif"> You will move the fingerprint into the circle as shown below by shifting your finger.</div>
             <input type="button" onclick="window.location.href = 'homePage.html';" id="buttonCancelPg4" value="Cancel">
             <input type="button" onclick="window.location.href = 'measurement.html';" id="buttonMeasurements" value="Start Measurement">
         </div>
